<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/investor_mobile_navigation"
    app:startDestination="@+id/investor_navigation_home">

    <fragment
        android:id="@+id/investor_navigation_home"
        android:name="kz.diplomka.startupmatch.ui.investor_role.fragments.InvestorHomeFragment"
        android:label="@string/investor_nav_home"
        tools:layout="@layout/fragment_investor_home" />

    <fragment
        android:id="@+id/investor_navigation_projects"
        android:name="kz.diplomka.startupmatch.ui.investor_role.fragments.LinkedProjectsFragment"
        android:label="@string/investor_nav_projects"
        tools:layout="@layout/fragment_linked_projects" />

    <fragment
        android:id="@+id/investor_navigation_challenges"
        android:name="kz.diplomka.startupmatch.ui.investor_role.fragments.ChallengesFromInvestorFragment"
        android:label="@string/investor_nav_challenges"
        tools:layout="@layout/fragment_investor_challenges" />

    <fragment
        android:id="@+id/investor_navigation_profile"
        android:name="kz.diplomka.startupmatch.ui.investor_role.fragments.InvestorProfileFragment"
        android:label="@string/investor_nav_profile"
        tools:layout="@layout/fragment_investor_profile" />
</navigation>
